--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "WFS Oceanographic Bulletin"
-author: "BDT"
-date: "2022-09-14"
+author: "Brendan Turley"
+date: 2022-09-14
 output: html_document
 ---
 
