--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,30 +1,14 @@
 ---
-title: "WFS Oceanographic Bulletin"
+title: "West Florida Shelf Oceanographic Bulletin"
 author: "Brendan Turley"
 date: 2022-09-14
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
 
-## R Markdown
+# MOST RECENT CRUISE
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+![Latest bottom data](https://github.com/Gulf-IEA/WFS_bulletins/blob/main/figures/latest_bottom.png)
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+![Latest underway data](https://github.com/Gulf-IEA/WFS_bulletins/blob/main/figures/latest_underway.png)
 
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
