--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -6,9 +6,20 @@ output: html_document
 ---
 
 
-# MOST RECENT CRUISE
+# **MOST RECENT DATA**
 
+## Bottom Data
 ![Latest bottom data](figures/latest_bottom.png)
 
+-----
+
+## Surface Data
 ![Latest underway data](figures/latest_underway.png)
+
+-----
+
+
+# **PREVIOUS DATA**
+
+Comeback: Under construction!
 
