--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -14,5 +14,8 @@ output: html_document
 # **[Previous data](previous_data.html)**
 
 
+## **[FCWC data explorer](https://oceandata.shinyapps.io/fcwc-data-explorer/)**
+
+
 -----
 ### [Report an issue](https://github.com/Gulf-IEA/WFS_bulletins/issues/new?assignees=bdturley&labels=User+supplied+issue&template=comment---concern---question---observation.md&title=User+supplied+issue)
