update SFER link

--- a/docs/about.Rmd
+++ b/docs/about.Rmd
@@ -18,7 +18,7 @@ Florida Commercial Watermen's Conservation ([FCWC](https://floridawatermen.org))
 
 ### NOAA OAR
 
-NOAA Atlantic Oceanographic and Meterological Laboratory's [South Florida Ecosystem Restoration Research Cruises](https://www.aoml.noaa.gov/data-products/#so-flo-cruise-data)
+NOAA Atlantic Oceanographic and Meterological Laboratory's [South Florida Ecosystem Restoration Research Cruises](https://www.aoml.noaa.gov/so-flo-ecosystem-restoration/)
 
 
 ### NOAA NMFS
