--- a/docs/previous_data.Rmd
+++ b/docs/previous_data.Rmd
@@ -3,16 +3,21 @@ title: "Previous Data"
 output: html_document
 ---
 
-## Results {.tabset}
+## Source {.tabset}
+
+Other data from previous cruises
  
-### Plots
+**Comeback: Under construction!**
+
+### FCWC
  
-Other data from previous sources
+Links
  
-Comeback: Under construction!
+### AOML
  
-### Tables
+Links
+
+### NMFS
  
-more text
+Links
  
------
