--- a/docs/previous_data.Rmd
+++ b/docs/previous_data.Rmd
@@ -9,7 +9,7 @@ Other data from previous cruises
  
 **Comeback: Under construction!**
 
-### FCWC
+### <span style="color: red;">FCWC</span>
  
 Links
  
