--- a/docs/previous_data.Rmd
+++ b/docs/previous_data.Rmd
@@ -30,8 +30,15 @@ May 2022 [bottom](figures/AOML/WS22141_bottom2.png) and [surface](figures/AOML/W
 
 
 
-
 ### NMFS
- 
-Links
+
+**Comeback: Under construction!**
+
+Data collected by [NOAA research vessels](https://www.omao.noaa.gov/find/fleet/ships).
+
+August 2021 [bottom](figures/NOAA/20210908_noaa_plot.png)
+
+September 2021 [bottom](figures/NOAA/20210920_noaa_plot.png)
+
+November 2021 [bottom](figures/NOAA/20211124_noaa_plot.png)
  
