--- a/docs/previous_data.Rmd
+++ b/docs/previous_data.Rmd
@@ -32,7 +32,9 @@ August 2020 [profiles](figures/AOML/20200908_WS_profile.pdf)
 ### FCWC
 
 **Comeback: Under construction!**
- 
+
+January 8, 2023 [profile](figures/FCWC/20230108_FCWC.png)
+
 January 6, 2022 [profile](figures/FCWC/20220106_FCWC_annotated.pdf)
 
 October 16, 2021 [profile](figures/FCWC/20211016_FCWC_annotated.pdf)
