--- a/docs/previous_v2.Rmd
+++ b/docs/previous_v2.Rmd
@@ -13,7 +13,7 @@ output: html_document
 
 -----
 
-### AOML
+#### AOML
 
 Data collected by the [R/V Walton Smith](https://www.earth.miami.edu/about-us/administration/marine-operations/f-g-walton-smith-vessel/index.html) unless noted otherwise.
 
