--- a/docs/previous_v2.Rmd
+++ b/docs/previous_v2.Rmd
@@ -6,7 +6,7 @@ output: html_document
  
 | | Jan | Feb | Mar | Apr | May | Jun | Jul | Aug | Sep | Oct | Nov | Dec |
 |:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|
-| 2023 |[<span style="color: ForestGreen;">FCWC profile</span>](figures/FCWC/20230108_FCWC.png) [<span style="color: SteelBlue;">AOML bottom</span>](figures/AOML/WS23011_bottom.png)|---|[<span style="color: SteelBlue;">AOML bottom</span>](figures/AOML/WS23061_bottom.png)|---|---|---|---|---|---|---|---|---|
+| 2023 |[<span style="color: ForestGreen;">FCWC profile</span>](figures/FCWC/20230108_FCWC.png) [<span style="color: SteelBlue;">AOML bottom</span>](figures/AOML/WS23011_bottom.png)|---|[<span style="color: SteelBlue;">AOML bottom</span>](figures/AOML/WS23061_bottom.png)|[<span style="color: ForestGreen;">FCWC profile</span>](figures/FCWC/20230408_FCWC.png)|---|---|---|---|---|---|---|---|
 | 2022 |[<span style="color: ForestGreen;">FCWC profile</span>](figures/FCWC/20220106_FCWC_annotated.pdf) [<span style="color: SteelBlue;">AOML bottom</span>](figures/AOML/WS22022_bottom.png) [<span style="color: SteelBlue;">AOML surface</span>](figures/AOML/WS22022_underway.png)|---|---|---|[<span style="color: SteelBlue;">AOML bottom</span>](figures/AOML/WS22141_bottom2.png) [<span style="color: SteelBlue;">AOML surface</span>](figures/AOML/WS22141_underway.png) |---|---|---|[<span style="color: black;">NMFS bottom</span>](figures/NOAA/20220913_noaa_plot.png) [<span style="color: black;">NMFS bottom</span>](figures/NOAA/20220924_noaa_plot.png)|[<span style="color: SteelBlue;">AOML bottom</span>](figures/AOML/WS22281_bottom.png)|---|[<span style="color: SteelBlue;">AOML bottom</span>](figures/AOML/WS22337_bottom.png)|
 | 2021 |---|---|---|---|---|---|[<span style="color: ForestGreen;">FCWC profile</span>](figures/FCWC/20210719_FCWC_sampling.pdf)|---|[<span style="color: black;">NMFS bottom</span>](figures/NOAA/20210908_noaa_plot.png) [<span style="color: black;">NMFS bottom</span>](figures/NOAA/20210920_noaa_plot.png)|[<span style="color: ForestGreen;">FCWC profile</span>](figures/FCWC/20211016_FCWC_annotated.pdf)|[<span style="color: black;">NMFS bottom</span>](figures/NOAA/20211124_noaa_plot.png)|---|
 | 2020 |---|---|---|---|[<span style="color: ForestGreen;">FCWC profile</span>](figures/FCWC/20200506_FCWC_profile.pdf)|---|---|[<span style="color: ForestGreen;">FCWC profile</span>](figures/FCWC/20200816_FCWC_update.pdf)|---|---|---|---|
